fixed z-index so that chart and information display together and no longer overlay

--- a/styles/module/chart.css
+++ b/styles/module/chart.css
@@ -1,32 +1,23 @@
 #chart-canvas {
   /*display: none;*/
   background-color: white;
-  position: absolute;
-  z-index: 1;
+  /*position: absolute;*/
   width: 100%;
   /*max-height: 420px;*/
 }
 
-
-/*#toggle {
-  background-color: lightblue;
-  color: black;
-  width: 100px;
-  height: 20px;
-  margin: 20px;
-}*/
-
 #chart-wrapper {
   display: none;
-  width: 50%;
+  width: 100%;
   position: relative;
+  z-index: 1;
   /*height: 90%;*/
   height: 420px;
 }
 
-@media screen and (min-width: 640px){
+/*@media screen and (min-width: 640px){
   #chart-canvas {
     width: 100%;
     max-height: 500px;
   }
-}
+}*/
